--- a/src/mkdocs.yml
+++ b/src/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: f0rkznet
+site_name: Nick the Gray
 theme:
   name: material
   palette:
@@ -20,3 +20,11 @@ theme:
     - navigation.top
 copyright: >
   Copyright &copy; 2020 - 2022 Nick the Gray
+markdown_extensions:
+  - attr_list
+  - md_in_html
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
